# mcosu-ts

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: master-plan.md
public/default-hitsounds/: README.md
scripts/: generate-default-hitsounds.mjs
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/audio/: HitSoundPlayer.ts  InterpolatedClock.ts  MusicPlayer.ts
src/core/: ConVar.ts  ConVars.ts  GameRules.ts  GameplaySession.ts  Grade.ts  Health.ts  Mods.ts  OptionValues.ts  Replay.ts  Score.ts  SliderCurves.ts  SliderTicks.ts  Stacking.ts  StandardPerformance.ts  StarRatingCache.ts
src/data/: CollectionsDatabase.ts  GameplayLoader.ts  LocalPlayStore.ts  OsuBeatmapMetadata.ts  OsuDatabase.ts  OsuFile.ts  OsuFileWriter.ts  RawSongsLibrary.ts  ReplayExport.ts  ScoresDatabase.ts
src/fs/: idb.ts  osuFileSystem.ts  paths.ts  runtimeFileSystem.ts  tauriFileSystem.ts  types.ts
src/input/: GameplayInput.ts
tests/: CollectionsDatabase.test.ts  ConVar.test.ts  DefaultHitSounds.test.ts  FileSystemRuntime.test.ts  GameRules.test.ts  GameplayLoader.test.ts  GameplaySession.test.ts  Grade.test.ts  Health.test.ts  InterpolatedClock.test.ts  LocalPlayStore.test.ts  Mods.test.ts  OptionValues.test.ts  OsuBeatmapMetadata.test.ts  OsuDatabase.test.ts  OsuFile.test.ts  Replay.test.ts  ReplayExport.test.ts  Score.test.ts  ScoresDatabase.test.ts  ScoresDatabaseWriter.test.ts  Skin.test.ts  SliderCurves.test.ts  Stacking.test.ts  StandardPerformance.test.ts  StarRatingCache.test.ts
(+20 files in other folders)
